--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -20,26 +20,26 @@
 
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes scaleToCenter {
-  0%   {background-color:rgba(21, 0, 0, 0.9); right:0px; top:0px; transform: scale(1, 1);}
-  100% {background-color:rgba(21, 0, 0, 0.9); right:88px; top:0px; transform: scale(0.01, 0.1);}
+  0%   {background-color:rgba(21, 0, 0, 0.9); transform: scale(1, 1);display: block;}
+  100% {background-color:rgba(21, 0, 0, 0.9); transform: scale(0.01, 0.1);}
 }
 
 /* Standard syntax */
 @keyframes scaleToCenter {
-  0%   {background-color:rgba(21, 0, 0, 0.9); right:0px; top:0px; transform: scale(1, 1);}
-  100% {background-color:rgba(21, 0, 0, 0.9); right:88px; top:0px; transform: scale(0.01, 0.1);}
+  0%   {background-color:rgba(21, 0, 0, 0.9); transform: scale(1, 1);}
+  100% {background-color:rgba(21, 0, 0, 0.9); transform: scale(0.01, 0.1);}
 }
 
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes scaleFromCenter {
-  0%   {background-color:rgba(21, 0, 0, 0.9); right:0px; top:0px; transform: scale(0.1, 0.1);}
-  100% {background-color:rgba(21, 0, 0, 0.9); right:88px; top:0px; transform: scale(1, 1);}
+  0%   {background-color:rgba(21, 0, 0, 0.9); transform: scale(0.1, 0.1); display: block;}
+  100% {background-color:rgba(21, 0, 0, 0.9); transform: scale(1, 1);display: block;}
 }
 
 /* Standard syntax */
 @keyframes scaleFromCenter {
-  0%   {background-color:rgba(21, 0, 0, 0.9); right:0px; top:0px; transform: scale(0.1, 0.1);}
-  100% {background-color:rgba(21, 0, 0, 0.9); right:88px; top:0px; transform: scale(1, 1);}
+  0%   {background-color:rgba(21, 0, 0, 0.9); transform: scale(0.1, 0.1);}
+  100% {background-color:rgba(21, 0, 0, 0.9);  transform: scale(1, 1);}
 }
 
 /* Network-Panel animation */
@@ -73,13 +73,21 @@
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes goBottom {
   0%   {background-color:rgba(155, 101, 10, 0.9); top:0px;}
-  100%  {background-color:rgba(13, 46, 65, 0.9); top:95%;}
+  15% { width: 300px }
+  25% { width: 200px }
+  55% { width: 100px }
+  85% { width: 30px }
+  100%  {background-color:rgba(13, 46, 65, 0.9); top:95%; width: 30px;}
 }
 
 /* Standard syntax */
 @keyframes goBottom {
-  0%   {background-color:rgba(255, 120, 0, 0.9); top:0px;}
-  100%  {background-color:rgba(255, 25, 112, 0.9); top:95%;}
+  0% {background-color:rgba(255, 120, 0, 0.9); top:0px;}
+  15% { width: 300px }
+  25% { width: 200px }
+  55% { width: 100px }
+  85% { width: 30px }
+  100%  {background-color:rgba(255, 25, 112, 0.9); top:95%; width: 30px;}
 }
 
 @-webkit-keyframes goUp {
@@ -90,10 +98,42 @@
 /* Standard syntax */
 @keyframes goUp {
   0%   {background-color:rgba(255, 0, 0, 0.9); top:95%;}
-  100%  {background-color:rgba(13, 46, 65, 0.9); top:0px;}
+  15% { width: 10px }
+  25% { width: 100px }
+  55% { width: 200px }
+  85% { width: 300px }
+  100%  {background-color:rgba(13, 46, 65, 0.9); top:0px; width: 300px;}
 }
 
 /* bounceIn */
+.myZoom {
+  border: none;
+  -webkit-animation-name: scaleFromCenter;
+  animation-name: scaleFromCenter;
+  -webkit-animation-duration: .75s;
+  animation-duration: .75s;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  -webkit-animation-fill-mode: none;
+  animation-fill-mode: none;
+  animation-play-state: running;
+}
+
+.myZoomOut {
+  border: none;
+  -webkit-animation-name: scaleToCenter;
+  animation-name: scaleToCenter;
+  -webkit-animation-duration: .75s;
+  animation-duration: .75s;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  -webkit-animation-fill-mode: none;
+  animation-fill-mode: none;
+  animation-play-state: running;
+}
+
 .bounceIn {
   border: none;
   -webkit-animation-name: bounceIn;
