--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -406,13 +406,17 @@ canvas {
 }
 
 #user-profile-btn-ok {
-  position: absolute;
-  width: 10%;
-  min-width: 200px;
+  position: relative;
   bottom: 0;
-  left: 40%;
-  z-index: 1000;
+  z-index: 100;
   text-align: center;
+
+  @media only screen and (min-width: 1024px) {
+    position: absolute;
+    width: 10%;
+    min-width: 200px;
+    left: 40%;
+  }
 }
 
 .myButton {
@@ -525,7 +529,7 @@ canvas {
   height: 100%;
   background-color: rgba(32, 112, 132, 0.5);
   box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
-  z-index: 200;
+  z-index: 2;
 }
 
 .container {
@@ -533,12 +537,18 @@ canvas {
   position: relative;
   z-index: 0;
   margin: 1rem auto 0;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 0;
   width: 100%;
   max-width: 700px;
   height: auto;
   box-shadow: 0px 20px 20px -20px rgba(0, 0, 0, 0.8);
   border-radius: 20px;
+
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
+
+  @media only screen and (min-width: 1024px) {
+    padding: 1rem 1rem 1rem 1rem;
+  }
 }
 
 button:focus {
@@ -797,7 +807,7 @@ button:focus {
   }
 
   .form-app {
-    min-width: 150px;
+    min-width: fit-content;
   }
 
   .container {
